--- a/style.css
+++ b/style.css
@@ -5,7 +5,7 @@ html {
 body {
     color: white;
     display: block;
-    text-align: center;
+    /* text-align: center; */
 }
 
 .button {
@@ -14,6 +14,6 @@ body {
 }
 
 img {
-    height: 400px;
-    width: 400px;
+    height: 300px;
+    width: 300px;
 }
