Updated pics/objects/added explination to objects

--- a/style.css
+++ b/style.css
@@ -1,12 +1,38 @@
 html {
+    /* background-image: url(space.gif); */
     background-color: black;
-}
+}   
 
 body {
     color: white;
     display: block;
-    /* text-align: center; */
+    text-align: center;
 }
+
+/* #modal {
+    display: none;
+	background-color: rgba(0,0,0,0.4);
+	position: fixed;
+	top: 0;
+	left: 0;
+	height: 100%;
+	width: 100%;
+	z-index: 1;
+	/*This puts our modal in front of the body (which has a default z-index setting of `0`*/
+	/* overflow: auto; */
+	/*If overflow is clipped, a scroll-bar should be added to see the rest of the content}
+    */
+
+/* #modal-textbox {
+	background-color: darkgrey;
+    color: black;
+	height: 350px;
+	width: 550px;
+	border-radius: 2px;
+    margin: 150px auto;
+	/*This will set the margins for the top and the bottom to 150px (or larger). The right and left will automatically set themselves (and keep the box centered horizontally).*/
+	/* box-shadow: 0 2px 2px rgba(0, 0, 0, 0.2);
+} */
 
 .button {
     padding: 50px;
