Added looks and a touch of function

--- a/style.css
+++ b/style.css
@@ -1,6 +1,6 @@
 html {
     background-image: url(/gifs/stars.gif);
-    background-size: fill;
+    background-size: cover;
     width: 100vw;
     height: 100vh;
     position: fixed;
@@ -10,10 +10,59 @@ html {
 
 .welcomeSection {
 	padding-top: 10%;
+	font-family: 'Fjalla One', sans-serif;
+}
+
+.welcome {
+	font-size: 55px;
+}
+
+.welcomeStatement {
+	font-family: 'Georama', sans-serif;
+}
+
+#titleWelcome {
+	color: black;
+	font-size: 75px;
+	text-shadow:
+    0 0 7px #fff,
+    0 0 10px #fff,
+    0 0 21px #fff,
+    0 0 42px rgb(0, 57, 142),
+    0 0 82px rgb(0, 57, 142),
+    0 0 92px rgb(0, 57, 142),
+    0 0 102px rgb(0, 57, 142),
+    0 0 151px rgb(0, 57, 142);
+}
+
+#rulesButton {
+	padding: 10px;
+	font-family: 'Bebas Neue', cursive;
+	font-size: 20px;
+	display: inline-flex;
+	justify-content: center;
+}
+
+#rulesButton:hover {
+	box-shadow: 0px 5px 15px rgb(0, 57, 142);
+	transform: scale(1.25,1.25);
+}
+
+.startGame {
+	padding: 10px;
+	font-family: 'Bebas Neue', cursive;
+	font-size: 20px;
+	display: inline-flex;
+	justify-content: center;
+}
+
+.startGame:hover {
+	box-shadow: 2px 5px 15px rgb(0, 57, 142);
+	transform: scale(1.25,1.25);
 }
 
 #rulesModalContainer {
-	color: rgb(60, 97, 134);
+	color: white;
 	top: 0;
 	left: 0;
 	bottom: 0;
@@ -31,10 +80,29 @@ html {
 	background-color: rgba(0, 0, 0);
 	padding: 10px;
 	border-radius: 25px;
+	font-family: 'Georama', sans-serif;
+	font-size: 25px;
+}
+
+#ruleModalHeader {
+	color: black;
+	font-size: 75px;
+	text-shadow:
+    0 0 3px #fff,
+    0 0 5px #fff,
+    0 0 11px #fff,
+    0 0 10px rgb(0, 57, 142),
+    0 0 20px rgb(0, 57, 142),
+    0 0 23px rgb(0, 57, 142),
+    0 0 25px rgb(0, 57, 142),
+    0 0 37px rgb(0, 57, 142);
 }
 
 #ruleClose {
-	background-color: grey;
+	padding: 3px 10px 0px 10px;
+	font-family: 'Bebas Neue', cursive;
+	font-size: 20px;
+	background-color: slategrey;
 }
 
 
@@ -49,13 +117,42 @@ body {
 	display: none;
 }
 
+.planetName {
+	color: white;
+	font-size: 40px;
+	text-shadow:
+    0 0 3px black,
+    0 0 5px black,
+    0 0 11px black,
+    0 0 10px black,
+    0 0 20px black,
+    0 0 23px black,
+    0 0 25px black,
+    0 0 37px black;
+	font-family: 'Georama', sans-serif;}
+
+.planetQuestion {
+	color: white;
+	font-size: 30px;
+	text-shadow:
+    0 0 3px black,
+    0 0 5px black,
+    0 0 11px black,
+    0 0 10px black,
+    0 0 20px black,
+    0 0 23px black,
+    0 0 25px black,
+    0 0 37px black;
+	font-family: 'Georama', sans-serif;
+}
+
 img {
     height: 300px;
     width: 300px;
 }
 
 #planetModalContainer {
-	color: rgb(60, 97, 134);
+	color: #747682;
 	top: 0;
 	left: 0;
 	bottom: 0;
@@ -73,4 +170,21 @@ img {
 	background-color: rgba(0, 0, 0);
 	padding: 10px;
 	border-radius: 25px;
+	font-family: 'Georama', sans-serif;
+	font-size: 20px;
+	color: white;
+}
+
+#planetModalButton {
+	padding: 3px 10px 0px 10px;
+	font-family: 'Bebas Neue', cursive;
+	font-size: 20px;
+	background-color: slategrey;
+}
+
+#planetToHome {
+	padding: 3px 10px 0px 10px;
+	font-family: 'Bebas Neue', cursive;
+	font-size: 20px;
+	background-color: slategrey;
 }
