--- a/style.css
+++ b/style.css
@@ -1,5 +1,5 @@
 html {
-    background-image: url(/gifs/stars.gif);
+    background-image: url(./gifs/stars.gif);
     background-size: cover;
     width: 100vw;
     height: 100vh;
