--- a/style.css
+++ b/style.css
@@ -6,11 +6,14 @@ html {
     position: fixed;
     top: 0;
     left: 0;
+	overflow-x: visible;	
+	overflow-y: visible;
 }   
 
 .welcomeSection {
 	padding-top: 10%;
 	font-family: 'Fjalla One', sans-serif;
+	overflow: hidden;
 }
 
 .welcome {
@@ -35,12 +38,16 @@ html {
     0 0 151px rgb(0, 57, 142);
 }
 
+#welcomeButtonDiv {
+	display: inline-flex;
+	justify-content: center;
+	margin-bottom: 25px;
+}
+
 #rulesButton {
 	padding: 10px;
 	font-family: 'Bebas Neue', cursive;
 	font-size: 20px;
-	display: inline-flex;
-	justify-content: center;
 	margin-right: 10px;
 }
 
@@ -53,8 +60,6 @@ html {
 	padding: 10px;
 	font-family: 'Bebas Neue', cursive;
 	font-size: 20px;
-	display: inline-flex;
-	justify-content: center;
 	margin-left: 10px;
 }
 
@@ -151,6 +156,21 @@ body {
 img {
     height: 300px;
     width: 300px;
+}
+
+.inGameButtons {
+	font-family: 'Bebas Neue', cursive;
+	flex-wrap: wrap;
+	justify-content: center;
+	margin: 20px;
+	width: 200px;
+	height: 50px;
+	font-size: 20px;
+}
+
+.inGameButtons:hover {
+	box-shadow: 0px 5px 15px rgb(0, 57, 142);
+	transform: scale(1.25,1.25);
 }
 
 #planetModalContainer {
