--- a/style.css
+++ b/style.css
@@ -6,17 +6,20 @@ html {
     position: fixed;
     top: 0;
     left: 0;
-	overflow-x: visible;	
-	overflow-y: visible;
 }   
 
-#lifeText {
-	margin-top: 30px;
-	margin-right: 10px;
+.bodyDiv {
+	overflow-y: auto;
+}
+
+body {
+    color: white;
+    display: block;
+    text-align: center;
 }
 
 .lives {
-	display: flex;
+	display: none;
 	justify-content: flex-end;
 	color: white;
 	text-shadow:
@@ -31,6 +34,11 @@ html {
 	font-family: 'Fjalla One', sans-serif;
 }
 
+#lifeText {
+	margin-top: 30px;
+	margin-right: 10px;
+}
+
 .lifeImage {
 	height: 50px;
 	width: 30px;
@@ -39,10 +47,18 @@ html {
 	margin-left: 5px;
 }
 
+#hintButton {
+	margin-top: 15px;
+	margin-right: 20px;
+	padding: 0px 20px 0px 20px;
+	font-family: 'Bebas Neue', cursive;
+	font-size: 20px;
+	background-color: slategrey;
+}
+
 .welcomeSection {
 	padding-top: 10%;
 	font-family: 'Fjalla One', sans-serif;
-	overflow: hidden;
 }
 
 .welcome {
@@ -139,14 +155,6 @@ html {
 	font-family: 'Bebas Neue', cursive;
 	font-size: 20px;
 	background-color: slategrey;
-}
-
-
-
-body {
-    color: white;
-    display: block;
-    text-align: center;
 }
 
 .questionSection {
