--- a/style.css
+++ b/style.css
@@ -58,6 +58,15 @@ body {
 	background-color: slategrey;
 }
 
+#mainHome {
+	margin-top: 15px;
+	margin-right: 20px;
+	padding: 0px 20px 0px 20px;
+	font-family: 'Bebas Neue', cursive;
+	font-size: 20px;
+	background-color: slategrey;
+}
+
 #hintClosed {
 	display: none;
 	padding: 3px 10px 0px 10px;
